[tool.poetry]
name = "django-app"
version = "0.1.0"
description = ""
authors = ["Likai Ren <lebsfi@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9.1"
Django = "^4.2.5"
django-debug-toolbar = "^4.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
